# strelko

./: .cproject  .gitignore  .project  CMakeLists.txt  Config.h.in  HISTORY  README.md  ead.conf.dist  run-clang-analyzer.sh
data/: bg.xml  en.xml
docs/: schema_app_stack.dia  schema_deploy_architecture.dia  schema_deploy_distributed.dia
src/: CMakeLists.txt  bootstrap.c  bootstrap.h  conf_parser.c  conf_parser.h  confs.h  ead_server.c  ead_server.h  globals.h  http.c  http.h  httpserver.c  httpserver.h  logger.c  logger.h  main.c  rtc.c  rtc.h  signals.c  signals.h  status_codes.h  utils.c  utils.h  webserver.c  webserver.h  xmldb.c  xmldb.h
src/cfg/: rtc.c  rtc.h
src/config/: config.c  config.h  rtc.c  rtc.h
src/net/: webserver.c  webserver.h
src/utils/: conf_options.c  conf_options.h  conf_parser.c  conf_parser.h  helpers.c  helpers.h  logger.c  logger.h
test/: CMakeLists.txt  minunit.h  testhelpers.c  testlogs.c  tests.c  tests.h  testserver.c
